--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "path": "^0.12.7",
     "pg": "^8.11.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
